# ALexd-78-CW_6_Django

./: README.md  data.json  env.sample  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_content.py
blog/templates/blog/includes/: inc_blog_card.html
config/: settings.py
mailing/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: load_data.py  sendmessage.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_client_owner_logmessage_message_setmessage_message.py  0004_alter_logmessage_options_alter_setmessage_options_and_more.py  0005_remove_message_owner_message_user.py
mailing/templates/mailing/: base.html  client_detail.html  contacts.html  index.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_client_card.html  inc_mail_menu.html  inc_message_card.html  inc_product_card.html
users/: forms.py  models.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html
