[tool.poetry]
name = "cw-6-django"
version = "0.1.0"
description = ""
authors = ["ALexd-78 <alexd-78@yandex.ru>"]
readme = "README.md"
packages = [{include = "cw_6_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
pillow = "^10.0.0"
transliterate = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
